fixed background cutoff

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
   background-color: #FCF9ED;
   background-size: cover;
   background-attachment: scroll;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   padding-top: 50px;
   z-index: -1;
